<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ryft_example_primary_button_hint">Pay now</string>
    <string name="ryft_example_secondary_button_hint">Cancel</string>
    <string name="ryft_example_checkbox_text">Save card for future payments</string>

    <string name="ryft_pay">Pay now</string>
    <string name="ryft_processing">Processing…</string>
    <string name="ryft_save_card">Save card</string>
    <string name="ryft_or">or</string>
    <string name="ryft_retry">Retry</string>
    <string name="ryft_cancel">Cancel</string>
    <string name="ryft_card_number">Card number</string>
    <string name="ryft_card_name">Name on card</string>
    <string name="ryft_card_expiry_date">MM/YY</string>
    <string name="ryft_card_cvc">CVC</string>
    <string name="ryft_save_card_check_box">Save card for future payments</string>
    <string name="ryft_payment_form_card_only_header_title">Credit / Debit Card</string>
    <string name="ryft_save_card_form_title">Authorise Card</string>
    <string name="ryft_save_card_form_disclaimer">By authorising your card, you consent to your details being stored securely for future payments</string>
    <string name="ryft_google_pay_error_message">There was an unexpected issue displaying Google Pay</string>
    <string name="ryft_payment_not_found_developer_error_message">Developer error - payment not found</string>
    <string name="ryft_invalid_client_secret_developer_error_message">Developer error - invalid client secret</string>
    <string name="ryft_invalid_api_key_developer_error_message">Developer error - invalid api key</string>
    <string name="ryft_unsupported_required_action_developer_error_message">Developer error - unsupported required action: %1$s</string>

    <string name="ryft_bad_track_data">Your CVC or card expiration is invalid</string>
    <string name="ryft_cvv2_failure">Your CVC was incorrect, please check and try again</string>
    <string name="ryft_declined_do_not_honour">Your bank has declined this card</string>
    <string name="ryft_expired_card">Your card has expired</string>
    <string name="ryft_gateway_reject">Your bank have declined this payment</string>
    <string name="ryft_insufficient_funds">Your payment method does not have sufficient funds</string>
    <string name="ryft_invalid_card_number">Your card number is invalid</string>
    <string name="ryft_restricted_card">Your card has been restricted</string>
    <string name="ryft_security_violation">Security violation</string>
    <string name="ryft_3ds_authentication_failure">You failed to successfully authorize your payment method</string>
    <string name="ryft_unknown_error">An unknown error occurred</string>
    <string name="ryft_network_error">A network error occurred, please check your internet connection</string>

</resources>