<?xml version="1.0" encoding="utf-8"?>
<com.ryftpay.android.ui.component.RyftPaymentFormBody
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/partial_ryft_payment_form_body"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/row_ryft_card_name"
...
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:baselineAligned="false">

        <com.ryftpay.android.ui.component.RyftCardNameInputField
            android:id="@+id/input_field_ryft_card_name"
            android:layout_width="match_parent"
            style="@style/RyftCardNameInputField"/>

    </LinearLayout>

    <LinearLayout
...
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:baselineAligned="false">

        <com.ryftpay.android.ui.component.RyftCardNumberInputField
            android:id="@+id/input_field_ryft_card_number"
            android:layout_width="match_parent"
            style="@style/RyftCardNumberInputField"/>

    </LinearLayout>

    <LinearLayout
...
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:baselineAligned="false">

        <com.ryftpay.android.ui.component.RyftCardExpiryDateInputField
            android:id="@+id/input_field_ryft_card_expiry_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="12dp"
            style="@style/RyftCardExpiryDateInputField"/>

        <com.ryftpay.android.ui.component.RyftCardCvcInputField
            android:id="@+id/input_field_ryft_card_cvc"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/RyftCardCvcInputField"/>

    </LinearLayout>

...
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false">

        <include
            android:id="@+id/check_box_ryft_save_card"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            layout="@layout/chk_ryft"/>

        <TextView
            android:id="@+id/text_ryft_save_card_disclaimer"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:visibility="gone"
            android:text="@string/ryft_save_card_form_disclaimer"
            style="@style/RyftDisclaimerText"/>

...
